<resources>

    <string name="app_name">Mealstock</string>

    <string-array name="product_storage">
        <item>Getränke</item>
        <item>Gefrierfach</item>
        <item>Kühlfach</item>
        <item>Regal</item>
    </string-array>

    <string-array name="product_filter">
        <item>Milchprodukte</item>
        <item>Fleisch</item>
        <item>Gemüse</item>
        <item>Obst</item>
    </string-array>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_product_detail">ProductDetailActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="field_not_filled_out">field not filled out</string>
    <string name="email_pattern_error">email pattern error</string>
    <string name="user_has_been_registered_successfully">User has been registered successfully!</string>
    <string name="user_has_been_registered_failed">Failed to register. Maybe you email is already used.</string>
    <string name="Failed_to_register_Please_try_again.">Failed to register! Please try again.</string>
    <string name="password_to_short">min password length should be 6 charters</string>

    <string name="text_check_your_fridge">Check deinen Kühlschrank</string>

    <string name="Button_for_kuehlfach_list">Kühlschrankbutton</string>
    <string name="Button_for_gefrierfach_list">Gefrierfachbutton</string>

    <string name="message_no_results">Keine Ergebnisse!</string>

    <string name="hint_add">Hinzufügen</string>
    <string name="hint_enter_bought_date">Einkaufsdatum</string>
    <string name="hint_enter_expiry_date">Ablaufdatum</string>
    <string name="hint_productSearch">Suche nach dem Produkt</string>
    <string name="hint_product_name">Wie heißt es?</string>
    <string name="hint_product_price">Wie teuer?</string>
    <string name="hint_product_quanity">Wie oft?</string>
    <string name="hint_product_ingredients">Was ist enthalten?</string>
    <string name="hint_product_unit">In welchem Maß? (ml/g)</string>

    <string name="description_add_product">Produkt hinzufügen</string>
    <string name="description_productImage">Productimage</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_product_form">Produktbearbeitung</string>

    <string name="placeholder_productname">Produktname</string>
    <string name="placeholder_productUnit">Maßeinheit</string>

    <string name="bought">gekauft:</string>
    <string name="expires">läuft ab:</string>
    <string name="storage">Lagerung:</string>
    <string name="abort">Abbrechen</string>
    <string name="text_confirm">OK</string>
    <string name="description_productUnit">Anzahl</string>
    <string name="text_no_data">Keine Daten.</string>
    <string name="text_no_time_data">\?\?\?</string>
    <string name="text_energy_kcal">Energie (kcal)</string>
    <string name="text_saturated_fat">Gesättigte Fettsäuren</string>
    <string name="text_fat">Fett</string>
    <string name="text_carbohydrates">Kohlenhydrate</string>
    <string name="text_sugar">davon Zucker</string>
    <string name="text_protein">Eiweiß</string>
    <string name="text_salt">Salz</string>
    <string name="text_sodium">Natrium</string>
    <string name="text_nutrition_score">Nutrition Score</string>
    <string name="text_nutrient_values">Nährwerte per 100g</string>
    <string name="text_no_date">Kein Datum</string>
    <string name="text_expiring_soon">läuft bald ab:</string>
    <string name="placeholder_recipe_name">Rezeptname</string>
    <string name="placeholder_total_time">Arbeitszeit</string>
    <string name="title_recipes_for_product">Beliebte Gerichte zu Ihrem Produkt</string>
    <string name="text_no_recipes_found">Es wurden keine Rezepte zum Produkt gefunden.</string>
    <string name="hint_product_brands">Von welcher Marke?</string>
    <string name="hint_take_product_image">Produktbild aufnehmen</string>
    <string name="hint_generic_name">Wie würde man es allgemein nennen?</string>
    <string name="text_recipe_instructions">Kochanweisungen</string>
    <string name="text_recipe_quantity">Portionen</string>
    <string name="text_cuisine_type">Regionalität</string>
    <string name="text_meal_type">Menüart</string>
    <string name="text_dish_type">Speiseart</string>


</resources>