<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FridgeFreezerFragment">

    <TextView
        android:id="@+id/Startseite_CheckKuehlschrank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/text_check_your_fridge"
        android:textAlignment="center"
        android:textColor="?attr/colorPrimary"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Startseite_CheckKuehlschrank">

        <ImageView
            android:id="@+id/gefrierfach"
            android:layout_width="190dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:contentDescription="@string/Button_for_gefrierfach_list"

            android:scaleType="centerCrop"
            android:src="@drawable/fridge_frierfach"

            />

        <ImageView
            android:id="@+id/kuehl"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:contentDescription="@string/Button_for_kuehlfach_list"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/fridge_kuehl" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>