<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_white"
        tools:context=".fragments.RecipeDetailFragment">

        <TextView
            android:id="@+id/textView_recipe_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:fontFamily="@font/roboto_black"
            android:text="@string/placeholder_recipe_name"
            android:textColor="?attr/colorPrimary"
            android:textSize="28dp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageView_recipe"
            android:layout_width="204dp"
            android:layout_height="214dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_recipe_name"
            android:src="@drawable/product_placeholder"
            app:civ_border_color="#60C5B8"
            app:civ_border_width="5dp" />

        <androidx.cardview.widget.CardView
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            app:cardBackgroundColor="?attr/colorPrimary"
            app:cardCornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView_recipe">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView_cookingTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:padding="10dp"
                        android:text="@string/text_no_time_data"
                        android:textColor="?attr/colorOnPrimary"
                        android:textStyle="bold"
                        android:textSize="@dimen/font_normal"
                        app:drawableStartCompat="@drawable/ic_timer" />

                    <ImageButton
                        android:id="@+id/imageButton_favoriteStar"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="right"
                        android:background="?attr/colorPrimary"
                        android:src="@drawable/ic_star_off"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:clickable="true"
                        />


                </androidx.constraintlayout.widget.ConstraintLayout>




                <TextView
                    android:id="@+id/textView_cuisine_type_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/text_cuisine_type"
                    android:background="?attr/backgroundColor"
                    style="@style/title_primary_3"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/textView_cuisine_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/text_no_data"
                    android:textColor="?attr/colorOnPrimary"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/textView_meal_type_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/text_meal_type"
                    android:background="?attr/backgroundColor"
                    style="@style/title_primary_3"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/textView_meal_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/text_no_data"
                    android:textColor="?attr/colorOnPrimary"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/textView_dish_type_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/text_dish_type"
                    android:background="?attr/backgroundColor"
                    style="@style/title_primary_3"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/textView_dish_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/text_no_data"
                    android:textColor="?attr/colorOnPrimary"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/ingredients_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:padding="10dp"
                    android:text="Zutaten"
                    android:background="?attr/backgroundColor"
                    style="@style/title_primary_3"
                    android:textAlignment="center"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView_recipe_ingredients"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    tools:itemCount="2" />

                <TextView
                    android:id="@+id/textView_cookingInstructions_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/text_recipe_instructions"
                    android:background="?attr/backgroundColor"
                    style="@style/title_primary_3"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/textView_cookingInstructions_link"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/text_no_data"
                    android:textColor="?attr/colorOnPrimary"
                    android:autoLink="web"
                    android:textColorLink="?attr/colorOnPrimary"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/textView_quantity_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/text_recipe_quantity"
                    android:background="?attr/backgroundColor"
                    style="@style/title_primary_3"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/textView_quantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/text_no_data"
                    android:textColor="?attr/colorOnPrimary"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/textView_energy_kcal_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/text_energy_kcal"
                    android:background="?attr/backgroundColor"
                    style="@style/title_primary_3"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/textView_energy_kcal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/text_no_data"
                    android:textColor="?attr/colorOnPrimary"
                    android:textAlignment="center"/>


            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>